Implemented up and down routes for the same train.